修正了一些bug,1,发送ble数据时的等待窗口，可以被取消                      2，蓝牙的app重新打开连接问题，还没有被很好的解决

--- a/ActionCtr/app/src/main/res/layout/activity_ble_connect.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_ble_connect.xml
@@ -6,13 +6,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true">
+        android:layout_above="@+id/activity_ble_connect_progress_bar"
+        android:orientation="horizontal">
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:src="@drawable/yuezi"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="game start"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/activity_ble_connect_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
