--- a/ActionCtr/app/src/main/res/layout/activity_param_change.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_param_change.xml
@@ -18,6 +18,12 @@
                 android:layout_weight="1"
                 android:id="@+id/yaw_decrease"
                 android:text="decrease" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/yaw_increase"
+                android:text="increase"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -31,12 +37,11 @@
                 android:layout_weight="1"
                 android:inputType="numberDecimal"
                 android:id="@+id/edit_yaw"/>
-            <Button
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/yaw_increase"
-                android:text="increase"/>
+                android:layout_weight="2"
+                android:id="@+id/progress_yaw"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,6 +53,12 @@
                 android:layout_weight="1"
                 android:id="@+id/pitch_decrease"
                 android:text="decrease"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/pitch_increase"
+                android:text="increase"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -61,12 +72,11 @@
                 android:layout_weight="1"
                 android:inputType="numberDecimal"
                 android:id="@+id/edit_pitch"/>
-            <Button
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/pitch_increase"
-                android:text="increase"/>
+                android:layout_weight="2"
+                android:id="@+id/progress_pitch"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,6 +88,12 @@
                 android:layout_weight="1"
                 android:id="@+id/roll_decrease"
                 android:text="decrease"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/roll_increase"
+                android:text="increase"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -91,12 +107,11 @@
                 android:layout_weight="1"
                 android:inputType="numberDecimal"
                 android:id="@+id/edit_roll"/>
-            <Button
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/roll_increase"
-                android:text="increase"/>
+                android:layout_weight="2"
+                android:id="@+id/progress_roll"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,6 +123,12 @@
                 android:layout_weight="1"
                 android:id="@+id/speed1_decrease"
                 android:text="decrease"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/speed1_increase"
+                android:text="increase"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -121,12 +142,11 @@
                 android:layout_weight="1"
                 android:inputType="numberSigned"
                 android:id="@+id/edit_speed1"/>
-            <Button
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/speed1_increase"
-                android:text="increase"/>
+                android:layout_weight="2"
+                android:id="@+id/progress_speed1"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,6 +158,12 @@
                 android:layout_weight="1"
                 android:id="@+id/speed2_decrease"
                 android:text="decrease"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/speed2_increase"
+                android:text="increase"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -151,12 +177,11 @@
                 android:layout_weight="1"
                 android:inputType="numberSigned"
                 android:id="@+id/edit_speed2"/>
-            <Button
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/speed2_increase"
-                android:text="increase"/>
+                android:layout_weight="2"
+                android:id="@+id/progress_speed2"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
