--- a/ActionCtr/app/src/main/res/layout/activity_begin.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_begin.xml
@@ -97,17 +97,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/go_to_ctr_activity"
-            android:text="CTR"/>
+            android:text="控制"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="DATA"
+            android:text="数据"
             android:id="@+id/go_to_data_activity"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ABOUT"/>
+            android:text="关于"/>
     </LinearLayout>
 </RelativeLayout>
