--- a/ActionCtr/app/src/main/res/layout/activity_param_change.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_param_change.xml
@@ -17,13 +17,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/yaw_decrease"
-                android:text="decrease" />
+                android:text="-" />
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/yaw_increase"
-                android:text="increase"/>
+                android:text="+"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -52,13 +52,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/pitch_decrease"
-                android:text="decrease"/>
+                android:text="-"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/pitch_increase"
-                android:text="increase"/>
+                android:text="+"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -87,13 +87,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/roll_decrease"
-                android:text="decrease"/>
+                android:text="-"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/roll_increase"
-                android:text="increase"/>
+                android:text="+"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -122,13 +122,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/speed1_decrease"
-                android:text="decrease"/>
+                android:text="-"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/speed1_increase"
-                android:text="increase"/>
+                android:text="+"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -157,13 +157,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/speed2_decrease"
-                android:text="decrease"/>
+                android:text="-"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/speed2_increase"
-                android:text="increase"/>
+                android:text="+"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -216,18 +216,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/button_param_change"
-            android:text="change"/>
+            android:text="改变"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/button_param_save"
-            android:text="save"/>
+            android:text="保存"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/button_param_cancel"
-            android:text="cancel"/>
+            android:text="取消"/>
     </LinearLayout>
 </RelativeLayout>
