可以连接唐在洋的wifi，可以做基本的数据接收（不能发送），但是还没有有与之相关的UI

--- a/ActionCtr/app/src/main/res/layout/item_listview_activity_data.xml
+++ b/ActionCtr/app/src/main/res/layout/item_listview_activity_data.xml
@@ -44,4 +44,10 @@
         android:layout_weight="1"
         android:text=""
         android:id="@+id/text7_data_item_listview"/>
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text=""
+        android:id="@+id/text8_data_item_listview"/>
 </LinearLayout>
