--- a/ActionCtr/app/src/main/res/layout/activity_param_change.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_param_change.xml
@@ -203,6 +203,15 @@
                 android:gravity="center"
                 android:text=""
                 android:id="@+id/column_ward"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textSize="40sp"
+                android:gravity="center"
+                android:text="射"
+                android:id="@+id/button_param_shot"/>
         </LinearLayout>
     </LinearLayout>
 
