--- a/ActionCtr/app/src/main/res/layout/activity_data.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_data.xml
@@ -9,15 +9,34 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.action.app.actionctr.DataActivity">
-    <Spinner
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:id="@+id/Spinner">
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:layout_alignParentTop="true"
         android:id="@+id/option_select"></Spinner>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/gun_select"></Spinner>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_alignParentTop="true"
+        android:id="@+id/state_select"></Spinner>
+    </LinearLayout>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/option_select"
+        android:layout_below="@+id/Spinner"
         android:layout_above="@+id/save_or_cancel"
         android:id="@+id/list_data_display"></ListView>
     <LinearLayout
