--- a/ActionCtr/app/src/main/res/layout/activity_ble_connect.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_ble_connect.xml
@@ -4,32 +4,51 @@
     android:layout_height="match_parent" >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/activity_ble_connect_progress_bar"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/yuezi"/>
-        <Button
+            android:layout_height="match_parent"
+            android:src="@drawable/yuezi"
+            android:scaleType="centerCrop"/>
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="比赛开始"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/activity_ble_connect_progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ble_connect_progress"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100" />
-    </LinearLayout>
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="4"
+                android:src="@drawable/mashiruo"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="4"
+                android:src="@drawable/sha"
+                android:scaleType="centerCrop"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="蓝牙连接中..."
+                    android:gravity="center"
+                    android:id="@+id/ble_connect_display"/>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:background="#ffffff"
+                    android:text="skip"
+                    android:id="@+id/ble_connect_skip"/>
+            </RelativeLayout>
 
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
