修改了paramChangeActivity里面的柱子7需要打盘防守的特殊情况

--- a/ActionCtr/app/src/main/res/layout/activity_param_change.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_param_change.xml
@@ -149,6 +149,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_weight="1"
+                android:id="@+id/roll_or_district"
                 android:text="翻滚"/>
             <EditText
                 android:layout_width="0dp"
